infra/k8s/base/istio/destination-rules.yaml
# Istio DestinationRules for SIMPEL
# NOTE: authenc and secreton have sidecar.istio.io/inject: "false"
# so we must use DISABLE mode to allow plaintext connections from sidecared pods

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: authenc-mtls
spec:
  host: authenc
  trafficPolicy:
    tls:
      mode: DISABLE  # authenc has no Istio sidecar
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: secreton-mtls
spec:
  host: secreton
  trafficPolicy:
    tls:
      mode: DISABLE  # secreton has no Istio sidecar
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: postgres-mtls
spec:
  host: postgres-primary
  trafficPolicy:
    tls:
      mode: DISABLE  # PostgreSQL uses native TLS
